MEMBER: fixing overlay z-index stacking issues.

--- a/source/styles/ui/_overlay.scss
+++ b/source/styles/ui/_overlay.scss
@@ -2,6 +2,7 @@
 	&Overlay {
 		z-index: auto !important;
 		text-align: center;
+		min-height: 0 !important;
 	}
 	.overlay {
 		@include fixedAll;
